--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -250,7 +250,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.jpg") top right no-repeat;
+  background: url("../img/down.jpg") top right no-repeat;
   background-size: cover;
   position: relative;
 }
@@ -263,7 +263,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #hero:before {
   content: "";
-  background: rgba(255, 255, 255, 0.8);
+/*  background: rgba(255, 255, 255, 0.8); */
   position: absolute;
   bottom: 0;
   top: 0;
@@ -273,21 +273,21 @@ h1, h2, h3, h4, h5, h6 {
 
 #hero h1 {
   margin: 0;
-  font-size: 64px;
+  font-size: 55px;
   font-weight: 700;
   line-height: 56px;
-  color: #45505b;
+  color: #f49389;
 }
 
 #hero p {
-  color: #45505b;
+  color: #333;
   margin: 15px 0 0 0;
   font-size: 26px;
   font-family: 'Noto Sans KR', sans-serif;
 }
 
 #hero p span {
-  color: #f49389;
+  color: #333;
   letter-spacing: 1px;
 }
 
