--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,8 +10,8 @@
 --------------------------------------------------------------*/
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap');
 
-html{cursor: url("../img/favicon.png"), auto}
-a{cursor: url("../img/favicon.png"), auto}
+html{cursor: url("../img/cursor.png"), auto}
+a{cursor: url("../img/cursor.png"), auto}
 
 body {
   font-family: 'Noto Sans KR', sans-serif;
